[package]
name = "tmux-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux_interface = "^0.2.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
warp = "0.3"
